src/objects/NCP_CustomerCommunitySetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DO NOT UPDATE NAME FIELD</description>
    <fields>
        <fullName>Act_As_Customer_Permission_Set__c</fullName>
        <description>Permission Set to enable to Act As Customer user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Act As Customer Permission Set</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_URL_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Community URL Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Account Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Account</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_User_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer User Profile</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivate_Portal_User_Permission_Set__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deactivate_Portal_User_Permission_Set</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_User_Profile__c</fullName>
        <description>Customer Portal - Internal User Profile</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Internal User Profile</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Management_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Management Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Threshold_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Threshold Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Redirect_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Login Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_ATOS_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>You can use &apos;;&apos; separator to add several email addresses</inlineHelpText>
        <label>ATOS User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_AdminPermissionSets__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AdminPermissionSets</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_AdminProfiles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AdminProfiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Customer_Login_Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Login Profile</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_Nokia_HelpDesk_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia HelpDesk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NokiaSSOEndPointURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NokiaSSOEndPointURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SSOTargetEndPointURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SSOTargetEndPointURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SandboxNameForUserName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SandboxNameForUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Act_As_Permission_Set__c</fullName>
        <description>Permission Set Name. It enables User to launch Act As functionality.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Act As Permission Set</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_System_Threshold__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Warning System Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Community Setting</label>
</CustomObject>